--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,12 +6,12 @@
 #    By: vcastilh <vcastilh@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/08/18 10:20:32 by vcastilh          #+#    #+#              #
-#    Updated: 2022/09/12 11:37:56 by vcastilh         ###   ########.fr        #
+#    Updated: 2022/09/17 07:26:35 by coder            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
-CFLAGS = -Wall -Werror -Wextra -I. -c -g3
+CFLAGS = -Wall -Werror -Wextra -I. -c 
 CC = gcc 
 FILES = ft_isalpha.c \
 		ft_isdigit.c \
@@ -51,34 +51,15 @@ FILES = ft_isalpha.c \
 		ft_atold.c \
 		ft_getenv.c \
 		ft_atol.c \
-		ft_dlstnew.c \
-		ft_dlstadd_back.c \
-		ft_dlstlast.c \
-		ft_dlst_size.c \
-		teste.c \
-#		ft_lstnew.c \
-#		ft_lstadd_front.c \
-#		ft_lstsize.c \
-#		ft_lstlast.c \
-#		ft_lstadd_back.c \
-#		ft_lstdelone.c \
-#		ft_lstclear.c \
-#		ft_lstiter.c \
-
 
 OBJFILES = $(FILES:%.c=%.o)
-OBJBONUSFILES = $(BONUSFILES:%.c=%.o)
 
 all: $(NAME)
-
-#Está com relink
-#bonus: all $(OBJBONUSFILES)
-#	ar rcs $(NAME) $(OBJBONUSFILES)
 
 $(NAME): $(OBJFILES)
 	ar rcs $@ $^
 
-$(OBJFILES): $(FILES)
+$(OBJFILES):$(FILES)
 	$(CC) $(CFLAGS) $^
 	
 clean:
